# eshttp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  biome.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci-tests.yml  publish-desktop.yml  publish-packages.yml
apps/cli/: package.json  tsconfig.build.json  tsconfig.json
apps/cli/src/: cli.ts  index.ts  localSource.ts  nodeTransport.ts  transport.ts
apps/cli/test/: cli.integration.test.ts
apps/desktop/: .env.example  index.html  package.json  tsconfig.api.json  tsconfig.json  vercel.json  vite.config.ts
apps/desktop/api/_lib/: config.ts  db.ts  github.ts  (+6 more)
apps/desktop/public/: site.webmanifest
apps/desktop/src/: App.tsx  main.tsx  runtime.ts  sources.ts  styles.css  transports.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/test/: api.config.test.ts  api.db.test.ts  api.validation.test.ts  api.webhook.test.ts  collectionsRepository.git.test.ts  collectionsRepository.github.test.ts  desktop.integration.test.ts  inlineMonaco.test.ts  storageOptions.test.ts
docs/dev/: desktop-dev-commands.md  desktop-import-sync.md  desktop-storage-options.md  desktop-tailwind-primitives.md  desktop-vercel-github-backend.md  inline-monaco-placeholders.md  request-build-env.md  workspace-discovery.md
libs/core/: package.json  tsconfig.json
libs/core/src/: config.ts  discovery.ts  env.ts  errors.ts  executor.ts  http.ts  index.ts  schemas.ts  source.ts
libs/core/test/: http.test.ts
(+20 files in other folders)
